--- a/filebeat/docs/modules/rabbitmq.asciidoc
+++ b/filebeat/docs/modules/rabbitmq.asciidoc
@@ -15,8 +15,9 @@ include::../include/what-happens.asciidoc[]
 [float]
 === Compatibility
 
-Parses https://www.rabbitmq.com/logging.html[single file format] introduced in 3.7.0. Tested with version 3.7.14.
+Parses https://www.rabbitmq.com/logging.html[single file format] introduced in 3.7.0.
 
+Tested with version 3.7.14 on MacOS 10.14.4.
 
 include::../include/running-modules.asciidoc[]
 
@@ -58,6 +59,8 @@ include::../include/config-option-intro.asciidoc[]
 ==== `log` fileset settings
 
 include::../include/var-paths.asciidoc[]
+
+include::../include/var-convert-timezone.asciidoc[]
 
 :has-dashboards!:
 
