--- a/metricbeat/docs/modules/redis.asciidoc
+++ b/metricbeat/docs/modules/redis.asciidoc
@@ -14,6 +14,8 @@ The defaut metricsets are `info` and `keyspace`.
 
 The Redis module has these additional config options:
 
+*`hosts`*:: Urls that are used to connect to redis.
+Url format: redis://[:password@]host[:port][/db-number][?option=value]
 *`password`*:: The password to authenticate, by default it's empty.
 *`idle_timeout`*:: The duration to remain idle before closing connections. If
   the value is zero, then idle connections are not closed. The default value
