--- a/libbeat/docs/security/users.asciidoc
+++ b/libbeat/docs/security/users.asciidoc
@@ -106,6 +106,7 @@ need to perform:
 |====
 |Task | Required privileges and roles
 
+ifndef::apm-server[]
 .3+|Send data to a secured cluster without index lifecycle management
 |`monitor` on cluster
 ifeval::["{beatname_lc}"=="filebeat"]
@@ -114,11 +115,20 @@ endif::[]
 |`create_index` and `index` on +{beat_default_index_prefix}-*+ indices
 |also requires privileges to <<privileges-to-setup-beats,set up index templates>>
 unless you've disabled automatic template loading
+endif::apm-server[]
+
+ifdef::apm-server[]
+.2+|Send data to a secured cluster without index lifecycle management
+|`manage_index_templates` and `monitor` on cluster
+|`create_index` and `write` on +{beat_default_index_prefix}-*+ indices
+endif::apm-server[]
 
 .2+|Send data to a secured cluster that supports index lifecycle management
-|`manage_index_templates`,`manage_ilm` footnote:[Use `read_ilm` instead of
-`manage_ilm` if you pre-loaded the lifecycle policy], and `monitor`
-on cluster
+|`manage_index_templates`, `manage_ilm`
+ifndef::apm-server[]
+footnote:[Use `read_ilm` instead of `manage_ilm` if you pre-loaded the lifecycle policy]
+endif::apm-server[]
+, and `monitor` on cluster
 ifeval::["{beatname_lc}"=="filebeat"]
 (and `manage_pipeline` if {beatname_uc} modules are used)
 endif::[]
@@ -153,6 +163,7 @@ perform:
 |====
 |Task | Required privileges and roles
 
+ifndef::no_dashboards[]
 .2+|View {beatname_uc} dashboards
 |`read` on +{beat_default_index_prefix}-*+ indices
 |`kibana_dashboard_only_user` role
@@ -160,6 +171,12 @@ perform:
 .2+|View and edit {beatname_uc} dashboards
 |`read` on +{beat_default_index_prefix}-*+ indices
 |`kibana_user` role
+endif::no_dashboards[]
+
+ifdef::apm-server[]
+|Use the APM UI
+|`kibana_user` and `apm_user` roles
+endif::apm-server[]
 
 ifdef::has_central_config[]
 .2+|Create and manage configurations in Beats central management
