--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -24575,12 +24575,29 @@ entropy
 
 
 
-*`system.entropy.entropy`*::
-+
---
-type: object
+[float]
+== entropy fields
 
 Available system entropy
+
+
+
+*`system.entropy.entropy.available_bits`*::
++
+--
+type: long
+
+The available bits of entropy
+
+
+--
+
+*`system.entropy.entropy.pct`*::
++
+--
+type: percentage
+
+The percentage of available entropy, relative to the pool size of 4096
 
 
 --
