--- a/metricbeat/module/rabbitmq/_meta/docs.asciidoc
+++ b/metricbeat/module/rabbitmq/_meta/docs.asciidoc
@@ -7,6 +7,6 @@ If `management.path_prefix` is set in RabbitMQ configuration, `management_path_p
 [float]
 === Compatibility
 
-The rabbitmq module is tested with RabbitMQ 3.7.4, and it should be compatible
+The rabbitmq module is fully tested with RabbitMQ 3.7.4 and partially tested with 3.6.0, 3.6.5 and 3.7.14 and it should be compatible
 with any version supporting the management plugin. This plugin needs to be
 enabled.
